[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.10"
serde = {version = "1.0.136", features = ["derive"]}
sqlx = {version = "0.5.11", features = ["runtime-actix-native-tls", "postgres", "macros", "chrono", "uuid"]}
config = "0.13.0"

[dev-dependencies]
#dev-dependencies are for running tests or examples
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html